--- a/fitness-app/package.json
+++ b/fitness-app/package.json
@@ -14,7 +14,8 @@
     "crpyto-js": "^0.0.1-security",
     "crypto-js": "^4.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
